--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ body.cursor-wall {
   display: grid;
   /* grid-template-columns: repeat(3, 1fr); */
   place-items: center;
+  box-sizing: border-box;
+  border: 5px solid black;
 }
 
 .tile {
